--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -5,7 +5,7 @@
   "Tracks": "Songs",
   "Playlists": "Playlists",
   "Albums": "Alben",
-  "Artists": "Künstler*innen",
+  "Artists": "Künstler",
   "More": "Mehr",
   "Settings": "Einstellungen",
   "Downloads": "Downloads",
@@ -27,7 +27,7 @@
   "Sort by": "Sortieren nach",
   "Date Added": "Hinzugefügt am",
   "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Künstler*innen (A-Z)",
+  "Artist (A-Z)": "Künstler (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
   "Error loading lyrics or lyrics not found!": "Fehler beim Laden der Songtexte bzw. Songtexte nicht gefunden!",
   "Create playlist": "Playlist erstellen",
@@ -86,7 +86,7 @@
   "Simultaneous downloads": "Gleichzeitige Downloads",
   "Always show download confirm dialog before downloading.": "Downloadbestätigungsdialog immer vor dem Download anzeigen.",
   "Show download dialog": "Download-Dialog anzeigen",
-  "Create folders for artists": "Ordner für Künstler*innen erstellen",
+  "Create folders for artists": "Ordner für Künstler erstellen",
   "Create folders for albums": "Ordner für Alben erstellen",
   "Download lyrics": "Lyrics herunterladen",
   "Variables": "Variablen",
@@ -158,9 +158,11 @@
   "Show all top tracks": "Zeige alle Top-Titel",
   "Singles": "Singles",
   "Album:": "Album:",
-  "Artists:": "Künstler*innen:",
+  "Artists:": "Künstler:",
   "Yes": "Ja",
   "No": "Nein",
   "Download Filename": "Dateiname herunterladen",
-  "Language": "Sprache"
+  "Language": "Sprache",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
