--- a/app/client/src/locales/fr.json
+++ b/app/client/src/locales/fr.json
@@ -162,5 +162,7 @@
   "Yes": "Oui",
   "No": "Non",
   "Download Filename": "Nom du fichier à télécharger",
-  "Language": "Langue"
+  "Language": "Langue",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
