--- a/app/client/src/locales/ro.json
+++ b/app/client/src/locales/ro.json
@@ -1,5 +1,5 @@
 {
-  "Home": "Home",
+  "Home": "Acasă",
   "Browse": "Caută",
   "Library": "Librărie",
   "Tracks": "Piese",
@@ -138,29 +138,31 @@
   "Website": "Website",
   "Visit website": "Vizitați site-ul web",
   "New update available:": "Actualizare nouă disponibilă:",
-  "Shuffle": "Shuffle",
-  "Download album cover": "Download album cover",
-  "Art Resolution": "Art Resolution",
+  "Shuffle": "Amestecare",
+  "Download album cover": "Descarcă coperta albumului",
+  "Art Resolution": "Rezoluția Imaginii",
   "Public": "Public",
-  "Private": "Private",
-  "Collaborative": "Collaborative",
-  "Edit playlist": "Edit playlist",
-  "Save": "Save",
-  "Edit": "Edit",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Private": "Privat",
+  "Collaborative": "Colaborativ",
+  "Edit playlist": "Editează playlist-ul",
+  "Save": "Salvează",
+  "Edit": "Editează",
+  "Importer": "Importator",
+  "Enter URL": "Introduceţi URL-ul",
+  "Currently only Spotify is supported and limited to 100 tracks.": "La moment, suportăm doar Spotify cu o limită de 100 de piese.",
+  "Import into playlist": "Importă în playlist",
+  "Keep sidebar open": "Păstrați meniul lateral deschis",
+  "WARNING: Might require reload to work properly!": "ATENȚIE: S-ar putea să fie necesar reîncărcarea aplicației pentru a funcționa adecvat!",
+  "An error occured, URL might be invalid or unsupported.": "A apărut o eroare, URL-ul ar putea fi invalid sau nesuportat.",
+  "Top tracks": "Piesele de top",
+  "Show all top tracks": "Arată toate piesele de top",
+  "Singles": "Single-uri",
+  "Album:": "Albumul:",
+  "Artists:": "Artiștii:",
+  "Yes": "Da",
+  "No": "Nu",
+  "Download Filename": "Denumirea Descărcării",
+  "Language": "Limba",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
