--- a/app/client/src/locales/uwu.json
+++ b/app/client/src/locales/uwu.json
@@ -13,7 +13,7 @@
   "Play": "Pway",
   "Add to library": "Add t-to wibwawy",
   "Download": "Downwoad",
-  "fans": "fams",
+  "fans": "fans *^*",
   "tracks": "twacks",
   "Quality": "Quawity >w<",
   "Estimated size:": "Estimated size uwu:",
@@ -162,5 +162,7 @@
   "Yes": "Yes :>",
   "No": "No :<",
   "Download Filename": "Downwoad Filename",
-  "Language": "Wanguage (Don't change me >w<)"
+  "Language": "Wanguage (Don't change me >w<)",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
