--- a/app/client/src/locales/ar.json
+++ b/app/client/src/locales/ar.json
@@ -162,5 +162,7 @@
   "Yes": "نعم",
   "No": "لا",
   "Download Filename": "تنزيل اسم الملف",
-  "Language": "اللغة"
+  "Language": "اللغة",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
