--- a/app/client/src/locales/fil.json
+++ b/app/client/src/locales/fil.json
@@ -162,5 +162,7 @@
   "Yes": "Oo",
   "No": "Hindi",
   "Download Filename": "Download Filename",
-  "Language": "Wika"
+  "Language": "Wika",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
