--- a/app/client/src/locales/he.json
+++ b/app/client/src/locales/he.json
@@ -1,166 +1,168 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
-  "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Home": "מסך הבית",
+  "Browse": "חיפוש",
+  "Library": "ספרייה",
+  "Tracks": "רצועות",
+  "Playlists": "רשימות השמעה",
+  "Albums": "אלבומים",
+  "Artists": "אמנים",
+  "More": "עוד",
+  "Settings": "הגדרות",
+  "Downloads": "הורדות",
+  "Search or paste Deezer URL. Use / to quickly focus.": "חפש או הדבק קישור מ־Deezer. השתמש ב־\" / \" להתמקדות מהירה.",
+  "Play": "הפעל",
+  "Add to library": "הוסף לספרייה",
+  "Download": "הורדה",
+  "fans": "תומכים",
+  "tracks": "רצועות",
+  "Quality": "איכות",
+  "Estimated size:": "גודל משוער:",
+  "Start downloading": "מתחיל הורדה",
+  "Cancel": "ביטול",
+  "Stream logging is disabled!": "הזרמת רישומים מושבתת!",
+  "Enable it in settings for history to work properly.": "אפשר זאת בהגדרות כדי שההיסטוריה תפעל כראוי.",
+  "History": "היסטוריה",
+  "Create new playlist": "צור רשימת השמעה חדשה",
+  "TRACKS": "רצועות",
+  "Sort by": "מיון לפי",
+  "Date Added": "תאריך הוספה",
+  "Name (A-Z)": "שם (א—ת)",
+  "Artist (A-Z)": "אמן (א—ת)",
+  "Album (A-Z)": "אלבום (א—ת)",
+  "Error loading lyrics or lyrics not found!": "שגיאה בניסיון לטעון את המילים או שלא נמצאו!",
+  "Create playlist": "צור רשימת השמעה",
+  "Create": "צור",
+  "Add to playlist": "הוסף לרשימת השמעה",
+  "Create new": "צור חדש",
+  "Remove": "הסר",
+  "Play next": "נגן הבא בתור",
+  "Add to queue": "הוסף לתור",
+  "Remove from library": "הסר מהספרייה",
+  "Remove from playlist": "הסר מרשימת ההשמעה",
+  "Play track mix": "נגן track mix",
+  "Go to": "עבור אל",
+  "Track Mix": "תמהיל רצועות",
+  "Duration": "משך זמן",
+  "Released": "שוחרר",
+  "Disk": "דיסק",
+  "albums": "אלבומים",
+  "Play top": "נגן את העליון",
+  "Radio": "רדיו",
+  "Show all albums": "הצג את כל האלבומים",
+  "Show all singles": "הצג את כל השירים",
+  "Show more": "הצג עוד",
+  "Downloaded": "ההורדה בוצעה",
+  "Queue": "תור",
+  "Total": "סה״כ",
+  "Stop": "עצור",
+  "Start": "התחל",
+  "Show folder": "הצג תיקייה",
+  "Clear queue": "נקה תור",
+  "Playing from": "מנגן מ",
+  "Info": "מידע",
+  "Lyrics": "מילות שיר",
+  "Track number": "מספר רצועה",
+  "Disk number": "מספר דיסק",
+  "Explicit": "בוטה",
+  "Source": "מקור",
+  "ID": "מספר מזהה",
+  "Error logging in!": "שגיאה בהתחברות!",
+  "Please try again later, or try another account.": "אנא נסה שוב מאוחר יותר, או נסה חשבון אחר.",
+  "Logout": "התנתקות",
+  "Login using browser": "התחבר/י דרך הדפדפן",
+  "Please login using your Deezer account:": "בבקשה התחבר/י באמצעות חשבון ה־Deezer שלך:",
+  "...or paste your ARL/Token below:": "...או הדבק/י את ה־ARL/Token שלך כאן:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Login": "התחברות",
+  "By using this program, you disagree with Deezer's ToS.": "בשימוש בתוכנה זו, את/ה לא מסכימ/ה עם תנאי השירות של Deezer.",
+  "Only in Electron version!": "רק בגרסת Electron!",
+  "Search results for:": "תוצאות חיפוש עבור:",
+  "Error loading data!": "שגיאה בטעינת הנתונים!",
+  "Try again later!": "נסה שוב מאוחר יותר!",
+  "Search": "חיפוש",
+  "Streaming Quality": "איכות הזרמה",
+  "Download Quality": "איכות הורדה",
+  "Downloads Directory": "מיקום ההורדות",
+  "Simultaneous downloads": "מספר הורדות במקביל",
+  "Always show download confirm dialog before downloading.": "תמיד הראה תיבת אישור הורדה לפני ההורדה.",
+  "Show download dialog": "הצג תיבת דו שיח להורדה",
+  "Create folders for artists": "צור תיקייה לאמנים",
+  "Create folders for albums": "צור תיקייה לאלבומים",
+  "Download lyrics": "הורד קובץ מילים",
+  "Variables": "משתנים",
+  "UI": "ממשק",
+  "Show autocomplete in search": "הצג השלמה אוטומטית בחיפוש",
+  "Integrations": "שילובים",
+  "This allows listening history, flow and recommendations to work properly.": "מאפשר להיסטוריית ההשמעות, הזרימה וההמלצות לעבוד כראוי.",
+  "Log track listens to Deezer": "רישומי השמעות של רצועות ב־Deezer",
+  "Connect your LastFM account to allow scrobbling.": "חבר/י את חשבון LastFM שלך כדי לאפשר מיזוג.",
+  "Login with LastFM": "התחבר/י באמצעות LastFM",
+  "Disconnect LastFM": "התנתקות מ־LastFM",
+  "Requires restart to apply!": "יש להפעיל מחדש על מנת להחיל את השינויים!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "אפשור חיבור ל־Discord Rich Presence, מצריך הפעלה מחדש!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!",
-  "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "אפשר את כפתור ההצטרפות של דיסקורד למטרת סנכרון רצונות. מצריך הפעלה מחדש!",
+  "Discord Join Button": "כפתור הצטרפות של Discord",
+  "Other": "אחר",
+  "Minimize to tray": "מזער למגש המערכת",
+  "Don't minimize to tray": "אל תמזער למגש המערכת",
+  "Close on exit": "סגור ביציאה",
+  "Settings saved!": "ההגדרות נשמרו בהצלחה!",
+  "Available only in Electron version!": "זמין רק בגרסת Electron!",
+  "Crossfade (ms)": "קרוספייד (מ\"ש)",
+  "Select primary color": "בחר צבע ראשי",
+  "Light theme": "ערכת נושא בהירה",
+  "Create folders for playlists": "צור תיקייה עבור רשימות השמעה",
+  "About": "אודות",
+  "Links:": "קישורים:",
+  "Telegram Releases": "שחרורי גרסאות ב־Telegram",
+  "Telegram Group": "קבוצת Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:",
-  "Shuffle": "Shuffle",
-  "Download album cover": "Download album cover",
-  "Art Resolution": "Art Resolution",
-  "Public": "Public",
-  "Private": "Private",
-  "Collaborative": "Collaborative",
-  "Edit playlist": "Edit playlist",
-  "Save": "Save",
-  "Edit": "Edit",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Telegram Android Group": "קבוצת Telegram למשתמשי Android",
+  "Credits:": "תודות:",
+  "Agree": "מסכים",
+  "Dismiss": "התעלם",
+  "Added to playlist!": "נוסף לרשימת ההשמעה!",
+  "Added to library!": "נוסף לספרייה!",
+  "Removed from library!": "הוסר מהספרייה!",
+  "Removed from playlist!": "הוסר מרשימת ההשמעה!",
+  "Playlist deleted!": "רשימת ההשמעה נמחקה!",
+  "Delete": "מחיקה",
+  "Are you sure you want to delete this playlist?": "האם את/ה בטוח/ה שברצונך למחוק את רשימת ההשמעה הזו?",
+  "Force white tray icon": "הכרח ערכת נושא בהירה על סמל מגש המערכת",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "הכרח ברירת מחדל (לבן) על סמל מגש המערכת אם ערכת הנושא זוהתה באופן שגוי. מצריך הפעלה מחדש.",
+  "Share": "שיתוף",
+  "Settings quality": "הגדרות איכות",
+  "Content language": "שפת תוכן",
+  "Content country": "מדינת תוכן",
+  "Website": "אתר",
+  "Visit website": "בקר באתר",
+  "New update available:": "גרסה חדשה זמינה:",
+  "Shuffle": "אקראי",
+  "Download album cover": "הורד עטיפת אלבום",
+  "Art Resolution": "רזולוציה",
+  "Public": "ציבורי",
+  "Private": "פרטי",
+  "Collaborative": "תורמים",
+  "Edit playlist": "עריכת רשימת ההשמעה",
+  "Save": "שמור",
+  "Edit": "ערוך",
+  "Importer": "מייבא רשימות השמעה",
+  "Enter URL": "הזן קישור",
+  "Currently only Spotify is supported and limited to 100 tracks.": "כרגע, רק Spotify נתמך ומוגבל ל־100 רצועות.",
+  "Import into playlist": "יבא לכדי רשימת השמעה",
+  "Keep sidebar open": "השאר את הסרגל פתוח",
+  "WARNING: Might require reload to work properly!": "אזהרה: מצריך טעינה מחדש כדי שיעבוד כראוי!",
+  "An error occured, URL might be invalid or unsupported.": "שגיאה התרחשה, הקישור כנראה שגוי או לא נתמך.",
+  "Top tracks": "רצועות מובילות",
+  "Show all top tracks": "הראה את כל הרצועות המובילות",
+  "Singles": "שירים",
+  "Album:": "אלבום:",
+  "Artists:": "אומנים:",
+  "Yes": "כן",
+  "No": "לא",
+  "Download Filename": "הורד/י את שם הקובץ",
+  "Language": "שפה",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
