--- a/app/client/src/locales/hi.json
+++ b/app/client/src/locales/hi.json
@@ -162,5 +162,7 @@
   "Yes": "Yes",
   "No": "No",
   "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Language": "Language",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
