--- a/app/client/src/locales/it.json
+++ b/app/client/src/locales/it.json
@@ -162,5 +162,7 @@
   "Yes": "Sì",
   "No": "No",
   "Download Filename": "Nome del file scaricato",
-  "Language": "Lingua"
+  "Language": "Lingua",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
