--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -162,5 +162,7 @@
   "Yes": "Да",
   "No": "Нет",
   "Download Filename": "Скачать шаблон для названия",
-  "Language": "Язык"
+  "Language": "Язык",
+  "Background Image": "Background Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
 }
