--- a/app/client/src/locales/hu.json
+++ b/app/client/src/locales/hu.json
@@ -9,7 +9,7 @@
   "More": "Továbbiak",
   "Settings": "Beállítások",
   "Downloads": "Letöltések",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Keressen, vagy illesszen be Deezer URL linket. Használja a \"/\" karaktert, hogy gyorsan ősszpontosítson.",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Keressen, vagy illesszen be Deezer URL linket. Használja a \"/\" karaktert, hogy megfelelően rámutasson.",
   "Play": "Lejátszás",
   "Add to library": "Hozzáadás a könyvtárhoz",
   "Download": "Letöltés",
@@ -19,7 +19,7 @@
   "Estimated size:": "Becsült fájl méret:",
   "Start downloading": "Letöltés indítása",
   "Cancel": "Mégse",
-  "Stream logging is disabled!": "Stream naplózás le van tiltva!",
+  "Stream logging is disabled!": "A stream naplózás le van tiltva!",
   "Enable it in settings for history to work properly.": "Engedélyezze a beállításokban, hogy az előzmények megfelelően működjenek.",
   "History": "Előzmények",
   "Create new playlist": "Új lejátszási lista létrehozása",
@@ -36,14 +36,14 @@
   "Create new": "Új létrehozása",
   "Remove": "Eltávolítás",
   "Play next": "Következő lejátszása",
-  "Add to queue": "Hozzáadás a várólistához",
+  "Add to queue": "Hozzáadás a listához",
   "Remove from library": "Eltávolítás a könyvtárból",
   "Remove from playlist": "Eltávolítás a lejátszási listáról",
   "Play track mix": "Dal Mix lejátszása",
-  "Go to": "Menjen",
+  "Go to": "Ugrás",
   "Track Mix": "Dal Mix",
   "Duration": "Időtartam",
-  "Released": "Kiadva",
+  "Released": "Megjelent",
   "Disk": "Lemez",
   "albums": "albumok",
   "Play top": "Legfelső lejátszása",
@@ -163,6 +163,9 @@
   "No": "Nem",
   "Download Filename": "Letöltött fájlnév",
   "Language": "Nyelv",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
+  "Background Image": "Háttérkép",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Adjon meg URL címet vagy teljes elérési utat. FIGYELEM: Újraindítás szükséges!",
+  "LGBT Mode": "LGBT Mode",
+  "Native top bar": "Native top bar",
+  "Requires restart of Freezer!": "Requires restart of Freezer!"
 }
