--- a/app/client/src/locales/tr.json
+++ b/app/client/src/locales/tr.json
@@ -163,6 +163,9 @@
   "No": "Hayır",
   "Download Filename": "Adlandırma taslağı indir",
   "Language": "Dil",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
+  "Background Image": "Arka plan resmi",
+  "Enter URL or absolute path. WARNING: Requires reload!": "URL'yi veya mutlak yolu girin. UYARI: yeniden yükleme gerektirir!",
+  "LGBT Mode": "LGBT Mode",
+  "Native top bar": "Native top bar",
+  "Requires restart of Freezer!": "Requires restart of Freezer!"
 }
