--- a/app/client/src/locales/ast.json
+++ b/app/client/src/locales/ast.json
@@ -163,6 +163,9 @@
   "No": "Non",
   "Download Filename": "Nome de les descargues",
   "Language": "Llingua",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
+  "Background Image": "Imaxe del fondu",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Introduz una URL o un camín absolutu. ALVERTENCIA: ¡Ha reaniciase l'aplicación!",
+  "LGBT Mode": "LGBT Mode",
+  "Native top bar": "Native top bar",
+  "Requires restart of Freezer!": "Requires restart of Freezer!"
 }
