--- a/app/client/src/locales/pl.json
+++ b/app/client/src/locales/pl.json
@@ -164,5 +164,8 @@
   "Download Filename": "Nazwa pobieranego pliku",
   "Language": "Język",
   "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
+  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!",
+  "LGBT Mode": "LGBT Mode",
+  "Native top bar": "Native top bar",
+  "Requires restart of Freezer!": "Requires restart of Freezer!"
 }
