--- a/app/client/src/locales/sk.json
+++ b/app/client/src/locales/sk.json
@@ -163,6 +163,9 @@
   "No": "Nie",
   "Download Filename": "Stiahnuť názov súboru",
   "Language": "Jazyk",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
+  "Background Image": "Obrázok pozadia",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Vložte URL alebo cestu. VAROVANIE: Vyžaduje obnovenie!",
+  "LGBT Mode": "LGBT Mode",
+  "Native top bar": "Native top bar",
+  "Requires restart of Freezer!": "Requires restart of Freezer!"
 }
