--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -161,8 +161,11 @@
   "Artists:": "Виконавці:",
   "Yes": "Так",
   "No": "Ні",
-  "Download Filename": "Download Filename",
+  "Download Filename": "Ім'я файлу завантаження",
   "Language": "Мова",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!"
+  "Background Image": "Фонове зображення",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Введіть URL або абсолютний шлях. УВАГА: необхідне перезавантаження!",
+  "LGBT Mode": "LGBT Mode",
+  "Native top bar": "Native top bar",
+  "Requires restart of Freezer!": "Requires restart of Freezer!"
 }
