--- a/app/client/src/locales/ast.json
+++ b/app/client/src/locales/ast.json
@@ -165,7 +165,7 @@
   "Language": "Llingua",
   "Background Image": "Imaxe del fondu",
   "Enter URL or absolute path. WARNING: Requires reload!": "Introduz una URL o un camín absolutu. ALVERTENCIA: ¡Ha reaniciase l'aplicación!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Mou LGBT",
+  "Native top bar": "Barra cimera nativa",
+  "Requires restart of Freezer!": "¡Tienes de reaniciar Freezer!"
 }
