--- a/app/client/src/locales/el.json
+++ b/app/client/src/locales/el.json
@@ -165,7 +165,7 @@
   "Language": "Γλώσσα",
   "Background Image": "Εικόνα Φόντου",
   "Enter URL or absolute path. WARNING: Requires reload!": "Εισάγετε URL ή απόλυτη διαδρομή. ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Απαιτείται επαναφόρτωση!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Λειτουργία LGBT",
+  "Native top bar": "Εγγενής επάνω γραμμή",
+  "Requires restart of Freezer!": "Απαιτεί επανεκκίνηση του Freezer!"
 }
