--- a/app/client/src/locales/es.json
+++ b/app/client/src/locales/es.json
@@ -165,7 +165,7 @@
   "Language": "Idioma",
   "Background Image": "Imagen de fondo",
   "Enter URL or absolute path. WARNING: Requires reload!": "Introducir la URL o ruta absoluta. ADVERTENCIA: ¡Necesita reiniciar!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Modo LGBT",
+  "Native top bar": "Barra superior nativa",
+  "Requires restart of Freezer!": "¡Se necesita reiniciar Freezer!"
 }
