--- a/app/client/src/locales/he.json
+++ b/app/client/src/locales/he.json
@@ -165,7 +165,7 @@
   "Language": "שפה",
   "Background Image": "תמונת רקע",
   "Enter URL or absolute path. WARNING: Requires reload!": "הזן כתובת אתר או נתיב מוחלט. אזהרה: מחייב טעינה מחדש!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "מצב להט\"ב",
+  "Native top bar": "סרגל עליון מקומי",
+  "Requires restart of Freezer!": "דורש הפעלה מחדש של Freezer!"
 }
