--- a/app/client/src/locales/hr.json
+++ b/app/client/src/locales/hr.json
@@ -165,7 +165,7 @@
   "Language": "Jezik",
   "Background Image": "Pozadinska slika",
   "Enter URL or absolute path. WARNING: Requires reload!": "Unesire URL ili apsolutnu putanju. UPOZORENJE: Zahtijeva ponovno pokretanje!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "LGBT način",
+  "Native top bar": "Izvorna gornja traka",
+  "Requires restart of Freezer!": "Zahtijeva ponovno pokretanje Freezera!"
 }
