--- a/app/client/src/locales/it.json
+++ b/app/client/src/locales/it.json
@@ -165,7 +165,7 @@
   "Language": "Lingua",
   "Background Image": "Immagine di sfondo",
   "Enter URL or absolute path. WARNING: Requires reload!": "Inserisci l'URL o il percorso assoluto. ATTENZIONE: Richiede il ricaricamento!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Modalità LGBT",
+  "Native top bar": "Barra superiore nativa",
+  "Requires restart of Freezer!": "Richiede il riavvio di Freezer!"
 }
