--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -165,7 +165,7 @@
   "Language": "Idioma",
   "Background Image": "Imagem de Fundo",
   "Enter URL or absolute path. WARNING: Requires reload!": "Digite URL ou caminho absoluto. ATENÇÃO: Requer recarregar!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Modo LGBT",
+  "Native top bar": "Barra superior nativa",
+  "Requires restart of Freezer!": "Requer reinicialização do Freezer!"
 }
