--- a/app/client/src/locales/ro.json
+++ b/app/client/src/locales/ro.json
@@ -165,7 +165,7 @@
   "Language": "Limba",
   "Background Image": "Imagine de fundal",
   "Enter URL or absolute path. WARNING: Requires reload!": "Introduceţi URL-ul sau calea completă. ATENŢIE: Necesită reîncărcare!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Regim LGBT",
+  "Native top bar": "Bara de sus",
+  "Requires restart of Freezer!": "Necesită repornirea aplicației!"
 }
