--- a/app/client/src/locales/sk.json
+++ b/app/client/src/locales/sk.json
@@ -165,7 +165,7 @@
   "Language": "Jazyk",
   "Background Image": "Obrázok pozadia",
   "Enter URL or absolute path. WARNING: Requires reload!": "Vložte URL alebo cestu. VAROVANIE: Vyžaduje obnovenie!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "LGBT mód",
+  "Native top bar": "Natívna horná lišta",
+  "Requires restart of Freezer!": "Vyžaduje sa reštart aplikácie!"
 }
