--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -165,7 +165,7 @@
   "Language": "Мова",
   "Background Image": "Фонове зображення",
   "Enter URL or absolute path. WARNING: Requires reload!": "Введіть URL або абсолютний шлях. УВАГА: необхідне перезавантаження!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Режим збоченців",
+  "Native top bar": "Власний top bar",
+  "Requires restart of Freezer!": "Потребує перезавантаження Freezer!"
 }
