--- a/app/client/src/locales/uwu.json
+++ b/app/client/src/locales/uwu.json
@@ -163,9 +163,9 @@
   "No": "No :<",
   "Download Filename": "Downwoad Filename",
   "Language": "Wanguage (Don't change me >w<)",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "Background Image": "Backgwound Image",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Entew UWW ow absowute path. WARNING: Requiwes Rewoad?!! *screams*",
+  "LGBT Mode": "LGBT Mode *^*",
+  "Native top bar": "Nyative t-top baw",
+  "Requires restart of Freezer!": "Requiwes Restawt  of Fweezew?!!"
 }
