--- a/app/client/src/locales/vi.json
+++ b/app/client/src/locales/vi.json
@@ -165,7 +165,7 @@
   "Language": "Ngôn ngữ",
   "Background Image": "Ảnh nền",
   "Enter URL or absolute path. WARNING: Requires reload!": "Nhập URL hoặc đường dẫn hợp lệ. CẢNH BÁO: Yêu cầu tải lại!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Chế độ LGBT",
+  "Native top bar": "Thanh trên cùng mặc định",
+  "Requires restart of Freezer!": "Cần khởi động lại Freezer!"
 }
