--- a/app/client/src/locales/fr.json
+++ b/app/client/src/locales/fr.json
@@ -165,7 +165,7 @@
   "Language": "Langue",
   "Background Image": "Image d'arrière-plan",
   "Enter URL or absolute path. WARNING: Requires reload!": "Entrez l'URL ou le chemin absolu. ATTENTION : Nécessite un redémarrage !",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "Mode LGBT",
+  "Native top bar": "Barre supérieure native",
+  "Requires restart of Freezer!": "Nécessite le redémarrage de Freezer !"
 }
