--- a/app/client/src/locales/hu.json
+++ b/app/client/src/locales/hu.json
@@ -57,45 +57,45 @@
   "Stop": "Megállít",
   "Start": "Elindít",
   "Show folder": "Mappa megjelenítése",
-  "Clear queue": "Várólista kiürítése",
-  "Playing from": "Lejátszva",
-  "Info": "Infrmáció",
-  "Lyrics": "Lyrics",
-  "Track number": "Dal (sor)száma",
+  "Clear queue": "Lejátszási lista kiürítése",
+  "Playing from": "Lejátszás innentől",
+  "Info": "Információ",
+  "Lyrics": "Dalszöveg",
+  "Track number": "Dal sorszáma",
   "Disk number": "Lemez száma",
-  "Explicit": "Explicit",
+  "Explicit": "Szókimondó",
   "Source": "Forrás",
   "ID": "Azonosító",
-  "Error logging in!": "Hiba történt bejelentkezéskor!",
-  "Please try again later, or try another account.": "Kérjük próbálja újra, vagy próbáljon egy másik fiókot.",
+  "Error logging in!": "Hiba történt a bejelentkezéskor!",
+  "Please try again later, or try another account.": "Kérjük próbálja újra, vagy próbálkozzon egy másik fiókkal.",
   "Logout": "Kijelentkezés",
   "Login using browser": "Belépés böngészővel",
   "Please login using your Deezer account:": "Kérjük lépjen be Deezer fiókjával:",
   "...or paste your ARL/Token below:": "... vagy illessze be az ARL/Token-t:",
   "ARL/Token": "ARL/Token",
   "Login": "Belépés",
-  "By using this program, you disagree with Deezer's ToS.": "Szoftwerünk használatával elutasítja a Deezer általános felhasználási feltételeit.",
-  "Only in Electron version!": "Csak teljes változatban elérhető!",
-  "Search results for:": "Találatok:",
+  "By using this program, you disagree with Deezer's ToS.": "Szoftverünk használatával elutasítja a Deezer általános felhasználási feltételeit.",
+  "Only in Electron version!": "Csak az Electron verzióban elérhető!",
+  "Search results for:": "Keresési találatok:",
   "Error loading data!": "Hiba az adatok betöltése közben!",
   "Try again later!": "Kérjük próbálja meg később!",
   "Search": "Keresés",
-  "Streaming Quality": "Streaming minősége",
+  "Streaming Quality": "Streamelés minősége",
   "Download Quality": "Letöltés minősége",
   "Downloads Directory": "Letöltések helye",
   "Simultaneous downloads": "Egyidejű letöltések",
-  "Always show download confirm dialog before downloading.": "Mindig mutassa a letöltés elfogadása kérdést letöltések előtt.",
+  "Always show download confirm dialog before downloading.": "Mindig mutassa a letöltési megerősítést letöltés előtt.",
   "Show download dialog": "Letöltés párbeszédpanel mutatása",
-  "Create folders for artists": "Mappa létrehozása az előadóhoz",
-  "Create folders for albums": "Mappa létrehozása az albumhoz",
-  "Download lyrics": "Lyrics letöltése",
+  "Create folders for artists": "Mappa létrehozása az előadónként",
+  "Create folders for albums": "Mappa létrehozása az albumonként",
+  "Download lyrics": "Dalszöveg letöltése",
   "Variables": "Változók",
   "UI": "Kezelőfelület",
-  "Show autocomplete in search": "Autómat kiegészítő mutatása kereséskor",
+  "Show autocomplete in search": "Kereső találat kiegészítése",
   "Integrations": "Integrációk",
   "This allows listening history, flow and recommendations to work properly.": "Ezzel engedélyezi az előzményeket és, hogy a Flow illetve az ajánlások működjenek.",
   "Log track listens to Deezer": "Dal előzmények rögzítése a Deezer számára",
-  "Connect your LastFM account to allow scrobbling.": "Csatlakozással LastFM fiókját, hogy engedélyezze az ajánlatokat.",
+  "Connect your LastFM account to allow scrobbling.": "Csatlakoztassa LastFM fiókját, hogy engedélyezze az ajánlatokat.",
   "Login with LastFM": "Belépés LastFM fiókkal",
   "Disconnect LastFM": "LastFM fiók eltávolítása",
   "Requires restart to apply!": "Újraindítás szükséges!",
@@ -103,7 +103,7 @@
   "Discord Rich Presence": "Discord Rich Presence",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Discord csatlakozás gomb engedélyezése dalok szinkronizálásához, újraindítás szükséges!",
   "Discord Join Button": "Discord csatlakozás gomb",
-  "Other": "Egyebek",
+  "Other": "Egyéb",
   "Minimize to tray": "Tálcára letétel",
   "Don't minimize to tray": "Ne tegye le a tálcára",
   "Close on exit": "Kilépés bezáráskor",
@@ -121,39 +121,39 @@
   "Telegram Android Group": "Telegram Android csoport",
   "Credits:": "Köszönet:",
   "Agree": "Elfogad",
-  "Dismiss": "Elutasít",
+  "Dismiss": "Elvet",
   "Added to playlist!": "Lejátszó listához adva!",
-  "Added to library!": "Könyvtárból adva!",
+  "Added to library!": "Könyvtárhoz adva!",
   "Removed from library!": "Eltávolítva a könyvtárból!",
   "Removed from playlist!": "Eltávolítva a lejátszási listából!",
   "Playlist deleted!": "Lejátszási lista törölve!",
   "Delete": "Töröl",
   "Are you sure you want to delete this playlist?": "Biztosan ki szeretné törölni a lejátszási listát?",
-  "Force white tray icon": "Fehér tálcaikon kényszerítése",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Alap (fehér) tálcaikon kényszerítése ha a kinézet hibásan lett észlelve. Újraindítás szükséges.",
+  "Force white tray icon": "Fehér tálcaikon használata mindenképpen",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Alap (fehér) tálcaikon használata ha a kinézet hibásan is lett észlelve. Újraindítás szükséges.",
   "Share": "Megosztás",
-  "Settings quality": "Minőség",
+  "Settings quality": "Letöltési minőség",
   "Content language": "Tartalom nyelve",
   "Content country": "Tartalom országa",
-  "Website": "Weblap",
-  "Visit website": "Weblap megnyitása",
+  "Website": "Weboldal",
+  "Visit website": "Weboldal megnyitása",
   "New update available:": "Újabb frissítés elérhető:",
-  "Shuffle": "Keverés",
+  "Shuffle": "Véletlenszerű lejátszás",
   "Download album cover": "Album borító letöltése",
-  "Art Resolution": "Kép felbontása",
+  "Art Resolution": "Borító felbontása",
   "Public": "Nyilvános",
   "Private": "Privát",
   "Collaborative": "Együttműködés",
   "Edit playlist": "Lejátszó lista szerkesztése",
   "Save": "Mentés",
   "Edit": "Szerkesztés",
-  "Importer": "Importer",
+  "Importer": "Importáló",
   "Enter URL": "Írjon be egy URL-t",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Jelenleg csak Spotify támogatott és 100 zeneszámra le van korlátozva.",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Jelenleg csak a Spotify támogatott és 100 zeneszámra le van korlátozva.",
   "Import into playlist": "Importálás a lejátszási listába",
   "Keep sidebar open": "Oldalsó sáv nyitva tartása",
-  "WARNING: Might require reload to work properly!": "Figyelem: Lehetséges hogy újra kell indítani az alkalmazást ahhoz hogy tökéletesen működjön!",
-  "An error occured, URL might be invalid or unsupported.": "Egy hiba történet: a megadott URL érvénytelen lehet vagy nem támogatott.",
+  "WARNING: Might require reload to work properly!": "Figyelem: Alkalmazás újraindítása szükséges!",
+  "An error occured, URL might be invalid or unsupported.": "Egy hiba történet: a megadott URL érvénytelen vagy nem támogatott.",
   "Top tracks": "Legjobb dalok",
   "Show all top tracks": "Mutasd az összes legjobb dalt",
   "Singles": "Kislemezek",
@@ -161,11 +161,11 @@
   "Artists:": "Előadó:",
   "Yes": "Igen",
   "No": "Nem",
-  "Download Filename": "Letöltött fájlnév",
+  "Download Filename": "Letöltési fájlnév",
   "Language": "Nyelv",
   "Background Image": "Háttérkép",
   "Enter URL or absolute path. WARNING: Requires reload!": "Adjon meg URL címet vagy teljes elérési utat. FIGYELEM: Újraindítás szükséges!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "LGBT mód",
+  "Native top bar": "Natív felső sáv",
+  "Requires restart of Freezer!": "Újraindítás szükséges!"
 }
