--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -163,9 +163,9 @@
   "No": "Нет",
   "Download Filename": "Скачать шаблон для названия",
   "Language": "Язык",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "Background Image": "Фоновое изображение",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Введите URL или полный путь. ВНИМАНИЕ: Требуется перезагрузка!",
+  "LGBT Mode": "Режим ЛГБТ",
+  "Native top bar": "Верхнюю панель",
+  "Requires restart of Freezer!": "Требуется перезагрузка!"
 }
