--- a/app/client/src/locales/sl.json
+++ b/app/client/src/locales/sl.json
@@ -163,9 +163,9 @@
   "No": "Ne",
   "Download Filename": "Imena prenosa",
   "Language": "Jezik",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "Background Image": "Slika za ozadje",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Vpiši URL ali absolutno pot. OPOZORILO: Zahtev ponovno nalaganje!",
+  "LGBT Mode": "LGBT način",
+  "Native top bar": "Sistemska zgornja vrstica",
+  "Requires restart of Freezer!": "Potrebuje ponovni zagon Freezerja!"
 }
