Revert to encrypted

--- a/app/client/src/locales/tr.json
+++ b/app/client/src/locales/tr.json
@@ -165,7 +165,7 @@
   "Language": "Dil",
   "Background Image": "Arka plan resmi",
   "Enter URL or absolute path. WARNING: Requires reload!": "URL'yi veya mutlak yolu girin. UYARI: yeniden yükleme gerektirir!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "LGBT Mode": "LGBT Modu",
+  "Native top bar": "Yerel üst çubuk",
+  "Requires restart of Freezer!": "Freezer'ın yeniden başlatılmasını gerektirir!"
 }
