--- a/app/client/src/locales/pl.json
+++ b/app/client/src/locales/pl.json
@@ -148,12 +148,12 @@
   "Save": "Zapisz",
   "Edit": "Edytuj",
   "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
+  "Enter URL": "Wprowadź adres URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Obecnie obsługuje tylko Spotify i maksymalnie 100 utworów.",
+  "Import into playlist": "Importuj na playlistę",
+  "Keep sidebar open": "Panel boczny zawsze otwarty",
+  "WARNING: Might require reload to work properly!": "UWAGA: Może wymagać ponownego uruchomienia, by działać poprawnie!",
+  "An error occured, URL might be invalid or unsupported.": "Wystąpił błąd, adres URL może być nieprawidłowy lub nieobsługiwany.",
   "Top tracks": "Najpopularniejsze utwory",
   "Show all top tracks": "Pokaż wszystkie najpopularniejsze utwory",
   "Singles": "Single",
@@ -163,9 +163,9 @@
   "No": "Nie",
   "Download Filename": "Nazwa pobieranego pliku",
   "Language": "Język",
-  "Background Image": "Background Image",
-  "Enter URL or absolute path. WARNING: Requires reload!": "Enter URL or absolute path. WARNING: Requires reload!",
-  "LGBT Mode": "LGBT Mode",
-  "Native top bar": "Native top bar",
-  "Requires restart of Freezer!": "Requires restart of Freezer!"
+  "Background Image": "Obraz w tle",
+  "Enter URL or absolute path. WARNING: Requires reload!": "Wprowadź adres URL lub całą ścieżkę pliku. UWAGA: Wymaga ponownego uruchomienia!",
+  "LGBT Mode": "Tryb LGBT",
+  "Native top bar": "Natywny górny pasek",
+  "Requires restart of Freezer!": "Wymaga ponownego uruchomiania Freezera!"
 }
